--- a/AC2.html
+++ b/AC2.html
@@ -80,7 +80,7 @@
 				(2)$\displaystyle\quad \frac{\partial u}{\partial t} = \kappa\frac{\partial^2u}{\partial x^2}\quad \text{one-dimensional heat equation}$
 				</p><br>
 				<p align="left">
-				(3)$\displaystyle\quad \frac{\partial^2 u}{\partial x^2} + \frac{\partial^2u}{\partial y^2}\quad \text{one-dimensional Laplace's equation}$
+				(3)$\displaystyle\quad \frac{\partial^2 u}{\partial x^2} + \frac{\partial^2u}{\partial y^2} = 0\quad \text{one-dimensional Laplace's equation}$
 				</p>
 								
 				</font>
