--- a/AC2.html
+++ b/AC2.html
@@ -321,7 +321,7 @@
 			<section align="left">
 				<h4>Method of solution depend on PDE type</h4>				
 				<font size="6">
-				For example
+				For example<br>
 				<ul>
 					<li><b>Parabolic PDEs</b> can be transformed into a form analogous to the <b>heat equation</b> and so solved with <em>standard methods</em></li><br>
 					<li>The famous $\color{yellow}{\text{Black Scholes PDE}}$ can be solved in this way to obtain the BS formula that is used to price financial derivatives</li>
