--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<div class="r-hstack">
 				<ul>
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1.html" target="_blank" style="color: yellow">Week 1</a></li>
-					<li>Week 2</li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2.html" target="_blank" style="color: yellow">Week 2</a></li>
 					<li>Week 3</li>
 					<li>Week 4</li>
 					<li>Week 5</li>
