--- a/AC2.html
+++ b/AC2.html
@@ -525,7 +525,7 @@
 					\]
 					Thus we have two solutions:
 					\[
-					u_1(x,y) = y(f_1(x))\quad\text{and}\quad u_2(x,y) = y^{-2}f_2(x)
+					u_1(x,y) = yf_1(x)\quad\text{and}\quad u_2(x,y) = y^{-2}f_2(x)
 					\]
 					Which we combine linearly to obtain the general solution
 					\[
