--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
 				<ul>
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1.html" target="_blank" style="color: yellow">Week 1</a></li>
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2.html" target="_blank" style="color: yellow">Week 2</a></li>
-					<li>Week 3</li>
-					<li>Week 4</li>
-					<li>Week 5</li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC3.html" target="_blank" style="color: yellow">Week 3</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC4.html" target="_blank" style="color: yellow">Week 4</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC5.html" target="_blank" style="color: yellow">Week 5</a></li>
 				</ul>
 				<p>$\qquad\qquad$</p>
 				<ul>
-					<li>Week 6</li>
-					<li>Week 7</li>
-					<li>Week 8</li>
-					<li>Week 9</li>
-					<li>Week 10</li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC6.html" target="_blank" style="color: yellow">Week 6</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC7.html" target="_blank" style="color: yellow">Week 7</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC8.html" target="_blank" style="color: yellow">Week 8</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC9.html" target="_blank" style="color: yellow">Week 9</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC10.html" target="_blank" style="color: yellow">Week 10</a></li>
 				</ul>
 				</div>
 				</p>				
