--- a/AC3.html
+++ b/AC3.html
@@ -68,7 +68,7 @@
 						<li>For any $\alpha\in \mathbb{R}$
 						\[
 						\color{white}{\boxed{\color{white}
-						\int_0^\alpha f(x)\mathrm{d}x = \int_\alpha^{\alpha+a}f(x)\mathrm{d}x
+						\int_0^a f(x)\mathrm{d}x = \int_\alpha^{\alpha+a}f(x)\mathrm{d}x
 						}}
 						\]
 						</li>
