--- a/AC3.html
+++ b/AC3.html
@@ -82,11 +82,14 @@
 					\[
 					 \begin{align*}
 					  \int_\alpha^{\alpha+a}f(x)\mathrm{d}x &= \int_\alpha^a f(x)\mathrm{d}x+\int_{a}^{\alpha+a}f(x)\mathrm{d}x\\
+					  &=\int_\alpha^a f(x)\mathrm{d}x+\int_0^\alpha f(y+a)\mathrm{d}y \\
 					  &=\int_\alpha^a f(x)\mathrm{d}x+\int_0^\alpha f(y)\mathrm{d}y \\
 					  &= \int_0^af(x)\mathrm{d}x
 					 \end{align*}
 					\]
-					As required 
+					As required <br>
+				
+					The third line follows since $f(y+a)=f(y)$ <em>i.e.</em> $f$ is periodic
 					
 					</font>
 				</section>
