--- a/AC3.html
+++ b/AC3.html
@@ -84,12 +84,11 @@
 					  \int_\alpha^{\alpha+a}f(x)\mathrm{d}x &= \int_\alpha^a f(x)\mathrm{d}x+\int_{a}^{\alpha+a}f(x)\mathrm{d}x\\
 					  &=\int_\alpha^a f(x)\mathrm{d}x+\int_0^\alpha f(y+a)\mathrm{d}y \\
 					  &=\int_\alpha^a f(x)\mathrm{d}x+\int_0^\alpha f(y)\mathrm{d}y \\
-					  &= \int_0^af(x)\mathrm{d}x
+					  &= \int_0^af(x)\mathrm{d}x \quad\text{as required}
 					 \end{align*}
-					\]
-					As required <br>
+					\]					
 				
-					The third line follows since $f(y+a)=f(y)$ <em>i.e.</em> $f$ is periodic
+					The third line follows since $f(y+a)=f(y)$ <em>i.e.</em> $f$ is periodic with period $a$
 					
 					</font>
 				</section>
