--- a/AC3.html
+++ b/AC3.html
@@ -278,7 +278,7 @@
 						 \begin{align*}
 						 \int_{-\pi}^\pi f(x)\mathrm{d}x &= \frac{a_0}{2}\int_{-\pi}^\pi\mathrm{d}x + \sum_{n=1}^\infty\left(a_n\int_{-\pi}^\pi \cos(nx)\mathrm{d}x + \right.\\
 						 &\left.b_n\int_{-\pi}^\pi \sin(nx)\mathrm{d}x\right)\\
-						 &=\frac{a_0}{2}\pi\implies \color{red}{\boxed{\color{white}a_0 = \frac{1}{\pi}\int_{-\pi}^\pi f(x)\mathrm{d}x}}
+						 &=a_0\pi\implies \color{red}{\boxed{\color{white}a_0 = \frac{1}{\pi}\int_{-\pi}^\pi f(x)\mathrm{d}x}}
 						 \end{align*}
 						\]
 						
