--- a/AC3.html
+++ b/AC3.html
@@ -326,7 +326,7 @@
 						\end{align*}
 						\]
 						
-						Also, note that since $f(x)$ is <em>odd</em> we have that $a_n=0$
+						Also, note that since $f(x)$ is <em>odd</em> we have that $a_0=0$
 						</font>
 					</section>
 					<section  align="left">											
