--- a/AC3.html
+++ b/AC3.html
@@ -278,7 +278,7 @@
 						 \begin{align*}
 						 \int_{-\pi}^\pi f(x)\mathrm{d}x &= \frac{a_0}{2}\int_{-\pi}^\pi\mathrm{d}x + \sum_{n=1}^\infty\left(a_n\int_{-\pi}^\pi \cos(nx)\mathrm{d}x + \right.\\
 						 &\left.b_n\int_{-\pi}^\pi \sin(nx)\mathrm{d}x\right)\\
-						 &=a_0\pi\implies \color{red}{\boxed{\color{white}a_0 = \frac{1}{\pi}\int_{-\pi}^\pi f(x)\mathrm{d}x}}
+						 &=\frac{a_0}{2}\pi\implies \color{red}{\boxed{\color{white}a_0 = \frac{1}{\pi}\int_{-\pi}^\pi f(x)\mathrm{d}x}}
 						 \end{align*}
 						\]
 						
@@ -326,7 +326,7 @@
 						\end{align*}
 						\]
 						
-						Also, note that since $f(x)$ is <em>odd</em> we have that $a_0=0$
+						Also, note that since $f(x)$ is <em>odd</em> we have that $a_n=0$
 						</font>
 					</section>
 					<section  align="left">											
@@ -372,6 +372,12 @@
 						\pi = 4-\frac{4}{3}+\frac{4}{5}-\frac{4}{7}\cdots
 						\]
 						</font>
+					</section>						
+					<section>
+					<center>
+					<img data-src="figures/FSApproxPi.png">
+					</center>
+						<font size="6"> The above plot shows the partial sums (up to $n=50$ terms) for the FS computed over page</font>
 					</section>
 				</section>		
 				<section>
