--- a/AC3.html
+++ b/AC3.html
@@ -360,6 +360,12 @@
 						</font>
 						Since only sine terms arise in this series we call it a <em>Fourier sine series</em>
 					</section>
+					<section>
+					<center>
+					<img data-src="figures/3p1FSApprox.png" style="border: 3px solid red;">
+					</center>
+						<font size="6"> The above plot shows the partial sums (up to $n=5, 10$ and $100$ terms) for the FS computed over page</font>
+					</section>
 					<section  align="left">											
 						<font size="6">
 						Interestingly, we can use the result $\color{red}{\boxed{\color{white}\displaystyle f(x) \sim\sum_{n=1}^\infty \frac{2}{n\pi}\left(1-(-1)^n\right)\sin(nx)}}$ <br>to get an approximation to $\pi$<br>
@@ -377,7 +383,7 @@
 					<center>
 					<img data-src="figures/FSApproxPi.png">
 					</center>
-						<font size="6"> The above plot shows the partial sums (up to $n=50$ terms) for the FS computed over page</font>
+						<font size="6"> The above plot shows our approximation to $\pi$ for increasing $n$</font>
 					</section>
 				</section>		
 				<section>
