--- a/AC3.html
+++ b/AC3.html
@@ -326,7 +326,7 @@
 						\end{align*}
 						\]
 						
-						Also, note that since $f(x)$ is <em>odd</em> we have that $a_n=0$
+						Also, note that since $f(x)$ is <em>odd</em> we have that $a_0=0$
 						</font>
 					</section>
 					<section  align="left">											
@@ -364,7 +364,7 @@
 					<center>
 					<img data-src="figures/3p1FSApprox.png" style="border: 3px solid red;">
 					</center>
-						<font size="6"> The above plot shows the partial sums (up to $n=5, 10$ and $100$ terms) for the FS computed over page</font>
+						<font size="6"> The above plot shows the partial sums (for $n=5, 10$ and $100$ terms) for the FS computed over page</font>
 					</section>
 					<section  align="left">											
 						<font size="6">
