--- a/AC4.html
+++ b/AC4.html
@@ -334,7 +334,7 @@
 						<li>After this lecture you should</li>
 						<ul>
 							<li>Know what periodic, odd and even functions are</li>
-							<li>Understand the principle of linear superposition and have a basi idea of what a FS is</li>							
+							<li>Understand the principle of linear superposition and have a basic idea of what a FS is</li>							
 						</ul><br>					
 					</ul>			
 					</font> 
