--- a/AC4.html
+++ b/AC4.html
@@ -250,7 +250,7 @@
 						
 						<br><br>
 						<ui>
-							<li>$f(x)\sin(nx)$ is odd so we can integrate from $0$ to $\pi$ and double the result</li>
+							<li>$f(x)\sin(nx)$ is even so we can integrate from $0$ to $\pi$ and double the result</li>
 							<li>On the interval $(0, \pi)$ the function \[f(x) = x|x|-x^3= x^2-x^3\]</li>
 						</ui>
 						
