--- a/AC3.html
+++ b/AC3.html
@@ -117,7 +117,7 @@
 					<b>Definition</b>  &emsp; Algebraicly $f$ is <a style="color:red"><b>odd</b></a> if and only if $f(-x)=-f(x)$ for all $x$ in the domain of $f$
 					 </p>
 					 
-					 Geometrically, a function $f(x)$ is even if it admits rotational symmetry with respect to the origin<br>
+					 Geometrically, a function $f(x)$ is odd if it admits rotational symmetry with respect to the origin<br>
 					 
 					 Some familiar examples include ...
 						</font>
