--- a/AC5.html
+++ b/AC5.html
@@ -65,7 +65,7 @@
 						 b_n=\frac{1}{\pi}\int_{-\pi}^\pi f(x)\sin(nx)\mathrm{d}x&=\frac{2}{\pi}\int_0^\pi f(x)\sin(nx)\mathrm{d}x\\
 						 &=\frac{2}{\pi}\bigg[-\frac{1}{n}(x+\pi)\cos(nx)\bigg]_0^\pi \\&+\frac{2}{n\pi}\int_0^\pi \cos(nx)\mathrm{d}x\\
 						 &=\frac{2}{\pi}\bigg[-\frac{2\pi}{n}(-1)^n+\frac{\pi}{n}\bigg]\\
-						 &= \color{yellow}{\boxed{\color{white}\frac{2}{n\pi}\left(1-2(-1)^n\right)}}
+						 &= \color{yellow}{\boxed{\color{white}\frac{2}{n}\left(1-2(-1)^n\right)}}
 						 \end{align*}
 						\]
 						</font>
