--- a/AC5.html
+++ b/AC5.html
@@ -75,16 +75,16 @@
 						The Fourier series of our example is given by
 						\[
 						\color{yellow}{\boxed{\color{white}
-						 f(x)\sim \sum_{n=1}^\infty \frac{2}{n\pi}\left(1-2(-1)^n\right) \sin(nx)
+						 f(x)\sim \sum_{n=1}^\infty \frac{2}{n}\left(1-2(-1)^n\right) \sin(nx)
 						 }}
 						\]
 						Recall that
 						\[
-						\sum_{n=1}^\infty \frac{2}{n\pi}\left(1-2(-1)^n\right) \sin(nx)
+						\sum_{n=1}^\infty \frac{2}{n}\left(1-2(-1)^n\right) \sin(nx)
 						\]
 						means $\displaystyle \lim_{n\to\infty} s_n(x)$ where
 						\[
-						s_n(x) = \sum_{m=1}^n \frac{2}{m\pi}\left(1-2(-1)^m\right) \sin(mx)
+						s_n(x) = \sum_{m=1}^n \frac{2}{m}\left(1-2(-1)^m\right) \sin(mx)
 						\]
 						</font>
 					</section>					
