--- a/AC5.html
+++ b/AC5.html
@@ -89,14 +89,15 @@
 						</font>
 					</section>					
 					<section  align="left">											
-						<font size="6">						
+						<font size="6">	
+						The question therefore is whether $s_n(x)$ converges for each $x$ and if it does is the limit $f(x)$?<br><br>
 						Some partial sums are plotted below
 						<img data-src="figures/Example5p1_PSs.png"style="border: 3px solid red;">
 						<p style="position:absolute;top:325px;left:50px;">$n=5$</p>
 						<p style="position:absolute;top:325px;left:400px;">$n=15$</p>
 						<p style="position:absolute;top:325px;left:725px;">$n=100$</p>
 						
-						<br><br>
+						<br>
 						At the discontinuities the FS appears to converge to zero...
 						</font>
 					</section>
@@ -149,7 +150,7 @@
 						<br>
 						<b>Example</b><br>
 						<ul>
-							<li>The function consists of 3 subintervals</li>
+							<li>The function consists of 4 subintervals</li>
 							<li>The left- and right-hand limits exist</li>							
 							<li>The function is cts on each subinterval</li>
 							<li>Therefore it is PWC</li>
