--- a/AC6.html
+++ b/AC6.html
@@ -245,7 +245,7 @@
 						 &= \frac{2}{\pi}\int_0^\pi f(x)\sin(nx)\mathrm{d}x\\
 						 &= \frac{2}{\pi}\int_0^\pi x\sin(nx)\mathrm{d}x\\
 						 &=\frac{2}{\pi}\bigg[-\frac{x}{n}\cos(nx)\bigg]_0^\pi+\frac{2}{n\pi}\int_0^\pi \cos(nx)\mathrm{d}x\\
-						 &= \frac{2}{n\pi}\left(-(-1)^n\right) = \color{red}{\boxed{\color{white}\frac{2}{n\pi}(-1)^{n+1}}}
+						 &= \frac{2}{n}\left(-(-1)^n\right) = \color{red}{\boxed{\color{white}\frac{2}{n}(-1)^{n+1}}}
 						 \end{align*}						
 						\]
 						</font>
@@ -255,7 +255,7 @@
 						Thus the FS for the function $F(x)$ is given by 
 						\[
 						\color{yellow}{\boxed{\color{white}
-						F(x)\sim \sum_{n=1}^\infty \frac{2}{n\pi}(-1)^{n+1}\sin(nx)
+						F(x)\sim \sum_{n=1}^\infty \frac{2}{n}(-1)^{n+1}\sin(nx)
 						}}
 						\]
 						which equals $f(x)$ on the interval $(0,\pi)$<br><br><br><br>
