--- a/AC7.html
+++ b/AC7.html
@@ -90,7 +90,7 @@
 						\color{red}{\boxed{\color{white}
 						\begin{cases}
 						F''-\lambda F = 0 & F(0)=F(L)=0\\
-						G'-\kappa\lambda = 0&
+						G'-\kappa\lambda G = 0&
 						\end{cases}						
 						}}
 						\]
@@ -139,7 +139,7 @@
 						<font size="6">		
 						Now	for the $G$-equation
 						\[
-						 G'-\kappa\lambda = 0 \quad\text{or}\quad \color{red}{\boxed{\color{white} G'+\kappa\frac{n^2\pi^2}{L^2}G=0}}
+						 G'-\kappa\lambda G = 0 \quad\text{or}\quad \color{red}{\boxed{\color{white} G'+\kappa\frac{n^2\pi^2}{L^2}G=0}}
 						\]
 						since 
 						\[
@@ -206,7 +206,7 @@
 						\[
 						\begin{cases}
 						F''-\lambda F = 0 & F(0)=F(\pi)=0\\
-						G'-4\lambda = 0&
+						G'-4\lambda G = 0&
 						\end{cases}	
 						\]
 						Since we have zero BCs we know that the $F$-equation should admit oscillatory solutions implying that
@@ -235,7 +235,7 @@
 						<font size="6">		
 						<b>$G$-equation:</b> &emsp; Since $\lambda = -\omega^2 = -n^2$ this equation becomes
 						\[
-						 G' +4n^2T = 0
+						 G' +4n^2T G = 0
 						\]
 						This is a first-order separable ODE with solution
 						\[
