--- a/AC7.html
+++ b/AC7.html
@@ -281,7 +281,7 @@
 						<li>After this lecture you should</li>
 						<ul>
 							<li>have knowledge of the 1D heat equation and in paticular its use in modelling real-world phenomena</li>
-							<li>be able to solve the 1D heat equation for 'speacial' initial conditions using the technique of separation of variables</li>														
+							<li>be able to solve the 1D heat equation for 'special' initial conditions using the technique of separation of variables</li>														
 						</ul><br>					
 					</ul>			
 					</font> 
