--- a/AC8.html
+++ b/AC8.html
@@ -180,7 +180,7 @@
 						<font size="6">
 						<b>Example 8.2</b> &emsp; Find the solution to the IBVP
 						\[
-						\frac{\partial u}{\partial t} = \frac{\partial^2 u}{\partial t^2}\quad x\in(0,L),~ t>0,\quad u(0,t)=u(L,t)=0
+						\frac{\partial u}{\partial t} = \frac{\partial^2 u}{\partial x^2}\quad x\in(0,L),~ t>0,\quad u(0,t)=u(L,t)=0
 						\]
 						when the initial condition is given by
 						\[
