--- a/AC8.html
+++ b/AC8.html
@@ -210,7 +210,7 @@
 						\[
 						\omega L=n\pi \implies \omega_n = n\pi/L, n=1,2,\ldots
 						\]
-						so &emsp; $\color{red}{\boxed{\color{white} F_n(x) = \sin\left(\frac{n\pi}{L}x\right), n=1,2,\ldots}}$<br>
+						so &emsp; $\color{red}{\boxed{\color{white} F_n(x) = B_n\sin\left(\frac{n\pi}{L}x\right), n=1,2,\ldots}}$<br>
 						
 						<a style="color: yellow">A family of solutions</a> 
 						</font>
