--- a/AC9.html
+++ b/AC9.html
@@ -425,7 +425,7 @@
 						<li>After this lecture you should</li>
 						<ul>							
 							<li>be aware of modelling applications of the 1D wave equation</li>														
-							<li>be able to solve the 1D wave equation for 'special' initial conditions</li>
+							<li>be able to solve the 1D wave equation for general initial conditions</li>
 						</ul><br>					
 					</ul>			
 					</font> 
