--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 				<p>
 				<div class="r-hstack">
 				<ul>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1.html" target="_blank" style="color: yellow">Week 1</a></li>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2.html" target="_blank" style="color: yellow">Week 2</a></li>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC3.html" target="_blank" style="color: yellow">Week 3</a></li>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC4.html" target="_blank" style="color: yellow">Week 4</a></li>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC5.html" target="_blank" style="color: yellow">Week 5</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L1.html" target="_blank" style="color: yellow">Week 1</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L2.html" target="_blank" style="color: yellow">Week 2</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L3.html" target="_blank" style="color: yellow">Week 3</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L4.html" target="_blank" style="color: yellow">Week 4</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L5.html" target="_blank" style="color: yellow">Week 5</a></li>
 				</ul>
 				<p>$\qquad\qquad$</p>
 				<ul>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC6.html" target="_blank" style="color: yellow">Week 6</a></li>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC7.html" target="_blank" style="color: yellow">Week 7</a></li>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC8.html" target="_blank" style="color: yellow">Week 8</a></li>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC9.html" target="_blank" style="color: yellow">Week 9</a></li>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC10.html" target="_blank" style="color: yellow">Week 10</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L6.html" target="_blank" style="color: yellow">Week 6</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L7.html" target="_blank" style="color: yellow">Week 7</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L8.html" target="_blank" style="color: yellow">Week 8</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L9.html" target="_blank" style="color: yellow">Week 9</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L10.html" target="_blank" style="color: yellow">Week 10</a></li>
 				</ul>
 				</div>
 				</p>				
