--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				
 				<div class="r-hstack">
 				<ul>										
-					<li>Week 14</li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L1.html" target="_blank" style="color: yellow">Week 14</a></li>
 					<li>Week 15</li>
 					<li>Week 16</li>
 					<li>Week 17</li>
