--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 				<p>
 				<div class="r-hstack">
 				<ul>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L1.html" target="_blank" style="color: yellow">Week 1</a></li>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L2.html" target="_blank" style="color: yellow">Week 2</a></li>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L3.html" target="_blank" style="color: yellow">Week 3</a></li>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L4.html" target="_blank" style="color: yellow">Week 4</a></li>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L5.html" target="_blank" style="color: yellow">Week 5</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L1.html" target="_blank" style="color: yellow">Lecture 1</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L2.html" target="_blank" style="color: yellow">Lecture 2</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L3.html" target="_blank" style="color: yellow">Lecture 3</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L4.html" target="_blank" style="color: yellow">Lecture 4</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L5.html" target="_blank" style="color: yellow">Lecture 5</a></li>
 				</ul>
 				<p>$\qquad\qquad$</p>
 				<ul>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L6.html" target="_blank" style="color: yellow">Week 6</a></li>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L7.html" target="_blank" style="color: yellow">Week 7</a></li>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L8.html" target="_blank" style="color: yellow">Week 8</a></li>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L9.html" target="_blank" style="color: yellow">Week 9</a></li>
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L10.html" target="_blank" style="color: yellow">Week 10</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L6.html" target="_blank" style="color: yellow">Lecture 6</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L7.html" target="_blank" style="color: yellow">Lecture 7</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L8.html" target="_blank" style="color: yellow">Lecture 8</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L9.html" target="_blank" style="color: yellow">Lecture 9</a></li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC1L10.html" target="_blank" style="color: yellow">Lecture 10</a></li>
 				</ul>
 				</div>
 				</p>				
@@ -43,19 +43,19 @@
 				
 				<div class="r-hstack">
 				<ul>										
-					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L1.html" target="_blank" style="color: yellow">Week 14</a></li>
-					<li>Week 15</li>
-					<li>Week 16</li>
-					<li>Week 17</li>
-					<li>Week 18</li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L1.html" target="_blank" style="color: yellow">Lecture 11</a></li>
+					<li>Lecture 12</li>
+					<li>Lecture 13</li>
+					<li>Lecture 14</li>
+					<li>Lecture 15</li>
 				</ul>
 				<p>$\qquad\qquad$</p>
 				<ul>										
-					<li>Week 19</li>
-					<li>Week 20</li>
-					<li>Week 21</li>
-					<li>Week 22</li>	
-					<li>Week 23</li>					
+					<li>Lecture 16</li>
+					<li>Lecture 17</li>
+					<li>Lecture 18</li>
+					<li>Lecture 19</li>	
+					<li>Lecture 20</li>					
 				</ul>				
 				</div>
 				Weeks 11-13 and 24 are to be used as revision weeks
