--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<ul>										
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L1.html" target="_blank" style="color: yellow">Lecture 11</a></li>
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L2.html" target="_blank" style="color: yellow">Lecture 12</a></li>
-					<li>Lecture 13</li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC3L2.html" target="_blank" style="color: yellow">Lecture 13</a></li>
 					<li>Lecture 14</li>
 					<li>Lecture 15</li>
 				</ul>
