--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L1.html" target="_blank" style="color: yellow">Lecture 11</a></li>
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L2.html" target="_blank" style="color: yellow">Lecture 12</a></li>
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L3.html" target="_blank" style="color: yellow">Lecture 13</a></li>
-					<li>Lecture 14</li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L4.html" target="_blank" style="color: yellow">Lecture 14</a></li>
 					<li>Lecture 15</li>
 				</ul>
 				<p>$\qquad\qquad$</p>
