--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L2.html" target="_blank" style="color: yellow">Lecture 12</a></li>
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L3.html" target="_blank" style="color: yellow">Lecture 13</a></li>
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L4.html" target="_blank" style="color: yellow">Lecture 14</a></li>
-					<li>Lecture 15</li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L5.html" target="_blank" style="color: yellow">Lecture 15</a></li>
 				</ul>
 				<p>$\qquad\qquad$</p>
 				<ul>										
@@ -58,7 +58,7 @@
 					<li>Lecture 20</li>					
 				</ul>				
 				</div>
-				Weeks 11-13 and 24 are to be used as revision weeks
+				Lectures 11-13 and 24 are to be used as revision weeks
 				</font>
 			</section>
 		</div>
