--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				</ul>
 				<p>$\qquad\qquad$</p>
 				<ul>										
-					<li>Lecture 16</li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L6.html" target="_blank" style="color: yellow">Lecture 16</a></li>
 					<li>Lecture 17</li>
 					<li>Lecture 18</li>
 					<li>Lecture 19</li>	
