--- a/AC2L5.html
+++ b/AC2L5.html
@@ -377,7 +377,7 @@
 			<p>More generally, it can be shown that </p>
 			\[
 			\color{red}{\boxed{\color{white}{
-			\int_\mathcal{C}\frac{1}{z-z_0}\mathrm{d}z = 2\pi i}}}
+			\oint_\mathcal{C}\frac{1}{z-z_0}\mathrm{d}z = 2\pi i}}}
 			\]			
 			<p>for $z_0\in\mathbb{C}$</p>
 			</span>
