--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<p>$\qquad\qquad$</p>
 				<ul>										
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L6.html" target="_blank" style="color: yellow">Lecture 16</a></li>
-					<li>Lecture 17</li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L7.html" target="_blank" style="color: yellow">Lecture 17</a></li>
 					<li>Lecture 18</li>
 					<li>Lecture 19</li>	
 					<li>Lecture 20</li>					
