--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<ul>										
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L6.html" target="_blank" style="color: yellow">Lecture 16</a></li>
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L7.html" target="_blank" style="color: yellow">Lecture 17</a></li>
-					<li>Lecture 18</li>
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L8.html" target="_blank" style="color: yellow">Lecture 18</a></li>
 					<li>Lecture 19</li>	
 					<li>Lecture 20</li>					
 				</ul>				
