--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L6.html" target="_blank" style="color: yellow">Lecture 16</a></li>
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L7.html" target="_blank" style="color: yellow">Lecture 17</a></li>
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L8.html" target="_blank" style="color: yellow">Lecture 18</a></li>
-					<li>Lecture 19</li>	
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L9.html" target="_blank" style="color: yellow">Lecture 19</a></li>	
 					<li>Lecture 20</li>					
 				</ul>				
 				</div>
