--- a/AC2L7.html
+++ b/AC2L7.html
@@ -155,7 +155,7 @@
 			<textBox touch-action="none">
 				<p>
 				\[
-				f(z) = \sum_{n=0}^\infty a_n(z-z_0)^n = \sum_{n=0}^\infty \frac{f^{(n)(z_0)}}{n!}(z-z_0)^n
+				f(z) = \sum_{n=0}^\infty a_n(z-z_0)^n = \sum_{n=0}^\infty \frac{f^{(n)}(z_0)}{n!}(z-z_0)^n
 				\]
 				</p>
 			</textBox>
