--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L7.html" target="_blank" style="color: yellow">Lecture 17</a></li>
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L8.html" target="_blank" style="color: yellow">Lecture 18</a></li>
 					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L9.html" target="_blank" style="color: yellow">Lecture 19</a></li>	
-					<li>Lecture 20</li>					
+					<li><a href="https://jjcrofts77.github.io/ACSlides/AC2L10.html" target="_blank" style="color: yellow">Lecture 20</a></li>	
 				</ul>				
 				</div>
 				Lectures 11-13 and 24 are to be used as revision weeks
