--- a/AC2L10.html
+++ b/AC2L10.html
@@ -210,7 +210,9 @@
 		\[
 		 \int_{-\infty}^\infty \frac{x}{(x^2-2x+2)^2}\, \mathrm{d}z= 2\pi i \mathrm{Res}(f;1+i)
 		\]
-		<p>Thus we need to compute the residue of $f$ at $z_1=1+i:$</p>
+		
+		<span class="fragment fade-in">	
+		<p>We need to compute the residue of $f$ at $z_1=1+i:$</p>
 		\[
 		 \begin{align*}
 		 \mathrm{Res}(f;1+i) &=\lim_{z\to 1+i}\left\{\frac{\mathrm{d}}{\mathrm{d}z}\bigg[(z-(1+i))^2f(z)\bigg]\right\}\\
@@ -219,6 +221,7 @@
 		 &= \frac{1}{(2i)^2}-\frac{2(1+i)}{(2i)^3} = \color{red}{\boxed{\color{white}{\frac{1}{4i}}}}
 		 \end{align*}
 		\]
+		</span>
 		
 		<span class="fragment fade-in">
 		<p>Thus</p>
@@ -264,7 +267,7 @@
 		\[
 		 \int_{-\infty}^\infty \frac{1}{1+x^4}\, \mathrm{d}z= 2\pi i \bigg(\mathrm{Res}(f;e^{\pi i/4}) + \mathrm{Res}(f;e^{3\pi i/4})\bigg)
 		\]
-		<p>Thus we need to compute the residues of $f$ at $z_1=e^{\pi i/4}$ and $z_2=e^{3\pi i/4}$:</p>
+		<p>We need to compute the residues of $f$ at $z_1=e^{\pi i/4}$ and $z_2=e^{3\pi i/4}$:</p>
 		
 		<span class="fragment fade-in">
 		<p> Since $f$ is rational and the poles are first order we have </p>
