--- a/AC2L10.html
+++ b/AC2L10.html
@@ -253,7 +253,7 @@
 		</span>
 		
 		<span class="fragment fade-in">
-		<p style="color:red">Note that the function $f$ has singularities $z_{n}=e^{(2n-1)\pi i/4}, n=1,\ldots 4$ all four being first order poles and that 
+		<p style="color:red">Note that the function $f$ has singularities $z_{n}=e^{(2n-1)\pi i/4}, n=1,\ldots 4$, all four being first order poles and that 
 		two of these lies in the upper half-plane</p>
 		
 		<img style="margin:0px;padding:0px;border: 3px solid red;position:absolute;top:50px;left:750px"				
