--- a/AC2L7.html
+++ b/AC2L7.html
@@ -363,7 +363,7 @@
 		 \begin{align*}
 		 \frac{1}{2}\left(e^z+e^{-z}\right) &=\frac{1}{2}\left[\left(1+z+\frac{z^2}{2!}+\frac{z^3}{3!}+\cdots\right)+\left(1+(-z)+\frac{(-z)^2}{2!}+\frac{(-z)^3}{3!}+\cdots\right)\right]\\
 		 &=\frac{1}{2}\left[2+2\frac{z^2}{2!}+2\frac{z^4}{4!}+\cdots\right]\\
-		 &= 1 + \frac{z^2}{2!}+ \frac{4^2}{4!}+\cdots\\
+		 &= 1 + \frac{z^2}{2!}+ \frac{z^4}{4!}+\cdots\\
 		 &=\cosh{z}
 		 \end{align*}
 		\]
