--- a/AC1L1.html
+++ b/AC1L1.html
@@ -39,9 +39,9 @@
 				</p>
 				<h3>Timetable</h3>
 				<p class="r-frame">
-				Lecturer: 11-12, Wednesday Pav121/CTLB LT4<br>	
-				Seminars: Group M1, M2 - 11-12, Tuesday NHB 169<br>				
-				&emsp;&emsp;&emsp;&ensp; Group M3, P 13-14, Tuesday CTLB P08
+				Lecturer: 13-14, Tuesday ERD 161<br>	
+				Seminars: Group M1 - 9-10, Tuesday NHB 169<br>				
+				&emsp;&emsp;&emsp;&ensp; Group M2, P 10-11, Tuesday ABK 005
 				</p>
 				
 				<h3>Office hours</h3>
@@ -410,7 +410,7 @@
 					<li>After this lecture you should be able to</li>
 					<ul>
 						<li>Solve second order linear homogeneous ODEs</li>
-						<li>Understand the difference between IV amd BV problems</li>
+						<li>Understand the difference between IV and BV problems</li>
 					</ul><br>
 					<li>Further ODE revision (including 1st order ODEs) can be found in <a href="https://jjcrofts77.github.io/Advanced-Calculus-MATH20471/content/notebooks/Part1/Chapter1/ODERev.html" target="_blank" style="color: red">Section 1.2</a> of the online web book</li>
 				</ul>			
