--- a/AC1L1.html
+++ b/AC1L1.html
@@ -40,7 +40,7 @@
 				<h3>Timetable</h3>
 				<p class="r-frame">
 				Lecturer: 13-14, Tuesday ERD 161<br>	
-				Seminars: Group M1 - 9-10, Tuesday NHB 169<br>				
+				Seminars: Group M1  9-10, Tuesday NHB 169<br>				
 				&emsp;&emsp;&emsp;&ensp; Group M2, P 10-11, Tuesday ABK 005
 				</p>
 				
