--- a/AC2L10.html
+++ b/AC2L10.html
@@ -210,9 +210,7 @@
 		\[
 		 \int_{-\infty}^\infty \frac{x}{(x^2-2x+2)^2}\, \mathrm{d}z= 2\pi i \mathrm{Res}(f;1+i)
 		\]
-		
-		<span class="fragment fade-in">	
-		<p>We need to compute the residue of $f$ at $z_1=1+i:$</p>
+		<p>Thus we need to compute the residue of $f$ at $z_1=1+i:$</p>
 		\[
 		 \begin{align*}
 		 \mathrm{Res}(f;1+i) &=\lim_{z\to 1+i}\left\{\frac{\mathrm{d}}{\mathrm{d}z}\bigg[(z-(1+i))^2f(z)\bigg]\right\}\\
@@ -221,7 +219,6 @@
 		 &= \frac{1}{(2i)^2}-\frac{2(1+i)}{(2i)^3} = \color{red}{\boxed{\color{white}{\frac{1}{4i}}}}
 		 \end{align*}
 		\]
-		</span>
 		
 		<span class="fragment fade-in">
 		<p>Thus</p>
@@ -253,7 +250,7 @@
 		</span>
 		
 		<span class="fragment fade-in">
-		<p style="color:red">Note that the function $f$ has singularities $z_{n}=e^{(2n-1)\pi i/4}, n=1,\ldots 4$, all four being first order poles and that 
+		<p style="color:red">Note that the function $f$ has singularities $z_{n}=e^{(2n-1)\pi i/4}, n=1,\ldots 4$ all four being first order poles and that 
 		two of these lies in the upper half-plane</p>
 		
 		<img style="margin:0px;padding:0px;border: 3px solid red;position:absolute;top:50px;left:750px"				
@@ -267,7 +264,7 @@
 		\[
 		 \int_{-\infty}^\infty \frac{1}{1+x^4}\, \mathrm{d}z= 2\pi i \bigg(\mathrm{Res}(f;e^{\pi i/4}) + \mathrm{Res}(f;e^{3\pi i/4})\bigg)
 		\]
-		<p>We need to compute the residues of $f$ at $z_1=e^{\pi i/4}$ and $z_2=e^{3\pi i/4}$:</p>
+		<p>Thus we need to compute the residues of $f$ at $z_1=e^{\pi i/4}$ and $z_2=e^{3\pi i/4}$:</p>
 		
 		<span class="fragment fade-in">
 		<p> Since $f$ is rational and the poles are first order we have </p>
