--- a/AC2L2.html
+++ b/AC2L2.html
@@ -35,9 +35,9 @@
 	  <!-- ################################################### -->
       <!-- ################################################### -->
       <section>
-		<h1>Advanced Calculus L12</h2>
+		<h1>Advanced Calculus L12</h1>
 		<br>
-		<h3>
+		
 		<ul>			
 			<li  style="color: #00FF00"><b>Functions of a complex variable</b></li>
 			<br>
@@ -47,7 +47,7 @@
 			<br>
 			<li>Examples</li>										
 		</ul>
-		</h3>
+		
 	</section>
     <!-- ################################################### -->
     <!-- ################################################### -->
@@ -108,9 +108,9 @@
 	 <!-- ################################################### -->
       <!-- ################################################### -->
       <section>
-		<h1>Advanced Calculus L12</h2>
+		<h1>Advanced Calculus L12</h1>
 		<br>
-		<h3>
+		
 		<ul>			
 			<li>Functions of a complex variable</li>
 			<br>
@@ -120,7 +120,7 @@
 			<br>
 			<li>Examples</li>										
 		</ul>
-		</h3>
+		
 	</section>
     <!-- ################################################### -->
     <!-- ################################################### -->
@@ -222,9 +222,9 @@
 	<!-- ################################################### -->
     <!-- ################################################### -->
 	      <section>
-		<h1>Advanced Calculus L12</h2>
+		<h1>Advanced Calculus L12</h1>
 		<br>
-		<h3>
+		
 		<ul>			
 			<li>Functions of a complex variable</li>
 			<br>
@@ -234,7 +234,7 @@
 			<br>
 			<li>Examples</li>										
 		</ul>
-		</h3>
+		
 	</section>
     <!-- ################################################### -->
     <!-- ################################################### -->
@@ -361,9 +361,9 @@
 			<!-- ################################################### -->
     <!-- ################################################### -->
 	      <section>
-		<h1>Advanced Calculus L12</h2>
+		<h1>Advanced Calculus L12</h1>
 		<br>
-		<h3>
+		
 		<ul>			
 			<li>Functions of a complex variable</li>
 			<br>
@@ -373,7 +373,7 @@
 			<br>
 			<li style="color: #00FF00"><b>Examples</b></li>										
 		</ul>
-		</h3>
+		
 	</section>
 	<!-- ################################################### -->
  <!-- ################################################### -->
@@ -435,7 +435,7 @@
 				<!-- ################################################### -->
     <!-- ################################################### -->
 	      <section>
-		<h1>Advanced Calculus L12</h2>
+		<h2 style="color:#00FF00">Lecture 12 Review</h2>
 		<br>
 		
 		<ul>			
