--- a/AC2L3.html
+++ b/AC2L3.html
@@ -37,13 +37,13 @@
 		<section align="left">
 		<h1>Advanced Calculus L13</h1>
 		<br>
-		<h3>
+		
 		<ul>			
 			<li  style="color: #00FF00"><b>Analytic functions</b></li>
 			<br>	
 			<li>Examples</li>										
 		</ul>
-		</h3>				
+		
 			</section>			
 			
 			<section>
@@ -267,13 +267,13 @@
 			<section align="left">
 <h1>Advanced Calculus L13</h1>
 		<br>
-		<h3>
+		
 		<ul>			
 			<li>Analytic functions</li>
 			<br>	
 			<li style="color: #00FF00"><b>Examples</b></li>										
 		</ul>
-		</h3>		
+		
 			</section>			
 			
 			<section>
@@ -479,11 +479,11 @@
 			</section>						
 
 			<section>
-				<h2 style="color:#FF33F9">Lecture 13 Review</h2>
+				<h2 style="color:#00FF00">Lecture 13 Review</h2>
 										
 		<br>
 		
-		<ul>			
+		
 			<ul>						
 					<li>In this lecture we covered</li>
 					<ul>
@@ -497,7 +497,7 @@
 						<li>be able to determine the harmonic conjugate of an analytic function</li>						
 					</ul><br>					
 				</ul>			
-		</ul>
+		
 		
 			</section>
 			 <!-- ################################################### -->
