--- a/AC2L4.html
+++ b/AC2L4.html
@@ -38,13 +38,13 @@
 	<section align="left">
 		<h1>Advanced Calculus L14</h1>
 		<br>
-		<h3>
+		
 		<ul>			
 			<li  style="color: #00FF00"><b>Zeros</b></li>
 			<br>	
 			<li>Singularities: poles, removable and essential</li>										
 		</ul>
-		</h3>				
+		
 	</section>			
 			
 	<section>
@@ -147,13 +147,13 @@
 	<section align="left">
 		<h1>Advanced Calculus L14</h1>
 		<br>
-		<h3>
+		
 		<ul>			
 			<li><b>Zeros</b></li>
 			<br>	
 			<li   style="color: #00FF00">Singularities: poles, removable and essential</li>										
 		</ul>
-		</h3>				
+		
 	</section>	
 	
 	<section>
@@ -428,11 +428,11 @@
 	<!-- ################################################### -->
     <!-- ################################################### -->
 	<section>
-		<h2 style="color:#FF33F9">Lecture 13 Review</h2>
+		<h2 style="color:#00FF00">Lecture 13 Review</h2>
 										
 		<br>
 		
-		<ul>			
+				
 		<ul>						
 			<li>In this lecture we covered</li>
 			<ul>
@@ -445,7 +445,7 @@
 			<li>be able to detect and classify singularities of complex valued functions</li>						
 		</ul><br>					
 		</ul>			
-		</ul>
+		
 		
 	</section>
 	<!-- ################################################### -->
