--- a/AC2L7.html
+++ b/AC2L7.html
@@ -155,7 +155,7 @@
 			<textBox touch-action="none">
 				<p>
 				\[
-				f(z) = \sum_{n=0}^\infty a_n(z-z_0)^n = \sum_{n=0}^\infty \frac{f^{(n)}(z_0)}{n!}(z-z_0)^n
+				f(z) = \sum_{n=0}^\infty a_n(z-z_0)^n = \sum_{n=0}^\infty \frac{f^{(n)(z_0)}}{n!}(z-z_0)^n
 				\]
 				</p>
 			</textBox>
@@ -363,7 +363,7 @@
 		 \begin{align*}
 		 \frac{1}{2}\left(e^z+e^{-z}\right) &=\frac{1}{2}\left[\left(1+z+\frac{z^2}{2!}+\frac{z^3}{3!}+\cdots\right)+\left(1+(-z)+\frac{(-z)^2}{2!}+\frac{(-z)^3}{3!}+\cdots\right)\right]\\
 		 &=\frac{1}{2}\left[2+2\frac{z^2}{2!}+2\frac{z^4}{4!}+\cdots\right]\\
-		 &= 1 + \frac{z^2}{2!}+ \frac{z^4}{4!}+\cdots\\
+		 &= 1 + \frac{z^2}{2!}+ \frac{4^2}{4!}+\cdots\\
 		 &=\cosh{z}
 		 \end{align*}
 		\]
@@ -374,7 +374,7 @@
 	</section>
 	
 		<section>
-		<h2 style="color:#FF33F9">Lecture 17 Review</h2>
+		<h2 style="color:#00FF00">Lecture 17 Review</h2>
 		<br>		
 		<ul>						
 					<li>In this lecture we covered</li>
