--- a/AC2L6.html
+++ b/AC2L6.html
@@ -228,7 +228,7 @@
 		\[
 		\color{#00FF00}{\boxed{\color{white}{
 		\begin{align*}		
-		I &= \int_{\mathcal{C}^*_1} f(z)\,\mathrm{d}z+\int_{\gamma_1} f(z)\,\mathrm{d}z-\int_{\mathcal{C}^*_2} f(z)\,\mathrm{d}z+\int_{\gamma_2} f(z)\,\mathrm{d}z\\
+		I &= \int_{\mathcal{C}^*_1} f(z)\,\mathrm{d}z+\int_{\gamma_1} f(z)\,\mathrm{d}z-\int_{\mathcal{C}^*_2} f(z)\,\mathrm{d}z+\int_{\gamma_1} f(z)\,\mathrm{d}z\\
 		&=0 \quad \text{due to Cauchy's theorem}
 		\end{align*}
 		}}}
@@ -425,7 +425,7 @@
 	</section>
 			
 	<section>
-		<h2 style="color:#FF33F9">Lecture 16 Review</h2>
+		<h2 style="color:#00FF00">Lecture 16 Review</h2>
 		<br>		
 		<ul>						
 					<li>In this lecture we covered</li>
@@ -439,9 +439,9 @@
 						<li>be able to apply the annulus theorem to compute integrals</li>
 						<li>extend these ideas to more complicated domains using the multiple annulus theorem</li>						
 					</ul><br>					
-				</ul>			
+		</ul>			
 			
-			</section>
+	</section>
 		</div>
 	</div>
 
