--- a/AC1L1.html
+++ b/AC1L1.html
@@ -456,7 +456,7 @@
 				</section>				
 			</section>	
 			
-			<section align="left">
+			<section>
 				<h2 style="color:#00FF00">Lecture 1 Review</h2>
 				<br>
 				
