--- a/AC1L2.html
+++ b/AC1L2.html
@@ -30,7 +30,7 @@
 		<h1>Advanced Calculus</h1>
 		<h2>Lecture 2</h2>
 		<p style="font-size:48px; color: #00FF00">Jonathan Crofts</p>        
-		<p style="color: #00FF00">Nottingham Trent University</p> 
+		<p style="color: #00FF00">Nottingham Trent University</p>
     </section>				
 			<section align="left">
 				<h1>Advanced Calculus L2</h1>
@@ -428,7 +428,7 @@
 				</section>					
 			</section>
 			<section>
-				<h1>Lecture 2 Review</h1>
+				<h2 style="color:#00FF00">Lecture 1 Review</h2>
 				<br>
 				
 				<ul>						
