--- a/AC1L2.html
+++ b/AC1L2.html
@@ -69,8 +69,8 @@
 				<ol>
 				<li>\[\frac{\partial^2 u}{\partial t^2} = c^2\frac{\partial^2u}{\partial x^2}\quad \text{one-dimensional wave equation}\]
 				</li><br>
-				<li class="fragment fade-in">\[\frac{\partial^2 u}{\partial t^2} = c^2\frac{\partial^2u}{\partial x^2}\quad \text{one-dimensional wave equation}\]</li><br>
-				<li class="fragment fade-in">\[\frac{\partial u}{\partial t} = \kappa\frac{\partial^2u}{\partial x^2}\quad \text{one-dimensional heat equation}\]</li>
+				<li class="fragment fade-in">\[\frac{\partial u}{\partial t} = \kappa\frac{\partial^2u}{\partial x^2}\quad \text{one-dimensional heat equation}\]</li><br>
+				<li class="fragment fade-in">\[\frac{\partial^2 u}{\partial x^2} + \frac{\partial^2u}{\partial y^2}=0\quad \text{one-dimensional Laplace's equation}\]</li>				
 				
 				</ol>
 				
