--- a/AC1L2.html
+++ b/AC1L2.html
@@ -246,7 +246,7 @@
 					<p>We combine these linearly to obtain the general solution</p>
 					
 					\[
-					\color{yellow}{\boxed{\color{white}{ 
+					\color{#00FF00}{\boxed{\color{white}{ 
 					u(x,y) = A_1(y)e^{x}+A_2(y)e^{-x}
 					}}}
 					\]
@@ -266,7 +266,7 @@
 					<p>Or </p>
 					\[
 					u_x = A(x)e^{-y} \implies 
-					\color{yellow}{\boxed{\color{white} {
+					\color{#00FF00}{\boxed{\color{white} {
 					 u(x,y) = B(x)e^{-y}+C(y)}}}
 					\]
 					<p>which is the general solution &ensp;
