--- a/AC1L3.html
+++ b/AC1L3.html
@@ -360,7 +360,7 @@
 						\]
 						<p>such that $\displaystyle f(x)=f(x+2\pi)$ outside of $(-\pi,\pi)$</p>
 
-						<img class="fragment fade-in" data-src="figures/Example3p1.png"style="position:absolute;top:350px;left:50px;width:75%; border: 3px solid red;">
+						<img class="fragment fade-in" data-src="figures/Example3p1.png"style="position:absolute;top:350px;left:50px;width:75%; border: 3px solid white">
 					</section>		
 					
 					<section  align="left">											
