--- a/AC1L10.html
+++ b/AC1L10.html
@@ -325,9 +325,9 @@
 						
 						<p>Let us consider Example 4.3 from the online notes, <em>i.e.</em> the wave equation with zero BCs and ICs given by</p>
 						\[
-						 u(x,0) = f(x) = \begin{cases}\frac{2x}{\pi}&x\in[0,\pi/2]\\\frac{2}{\pi}(\pi-x)&x\in[\pi/2,\pi]\end{cases}\\
+						 u(x,0) = f(x) = \begin{cases}\frac{2x}{\pi}&x\in[0,\pi/2]\\\frac{2}{\pi}(\pi-x)&x\in[\pi/2,\pi]\end{cases}
 						\]
-<p>and</p>
+						<p>and</p>
 						\[						
 						 u_t(x,0) = g(x)=0\qquad\qquad\qquad
 						\]
@@ -336,7 +336,7 @@
 						<span class="fragment fade-in">
 						<p><b>A guitar string plucked and released from rest</b></p>
 						
-						<img data-src="figures/GuitarStringEg.png"style="position:absolute;top:275px;left:550px;scale: .7">													
+						<img data-src="figures/GuitarStringEg.png"style="position:absolute;top:250px;left:575px;scale: .7">													
 						</span>
 					</section>
 					<section  align="left">											
