--- a/AC2L9.html
+++ b/AC2L9.html
@@ -69,7 +69,7 @@
 			\]
 			</span>
 			
-			<p class="fragment fade-in">Intergrating term by term gives...</p>
+			<p class="fragment fade-in">Integrating term by term gives...</p>
 			
 		</section>
 				
