--- a/AC1L1.html
+++ b/AC1L1.html
@@ -58,14 +58,13 @@
 	
 	<h3><b>Timetable</b></h3>
 	<p style="border-width:2px; border-style:solid; border-color:white; padding: .5em;">
-	Lecturer: 13-14, Tuesday ERD 161<br>	
-	Seminars: Group M1 9-10, Tuesday NHB 169<br>				
-	&emsp;&emsp;&emsp;&emsp;&emsp; Group M2 10-11, Tuesday ABK 005
+	Lecturer: 11-12, Monday NHB 169<br>	
+	Seminar: 3-4, Thursday NHB 169
 	</p>
 				
 	<h3><b>Office hours</b></h3>
 	<p style="border-width:2px; border-style:solid; border-color:white; padding: .5em;">
-	9:00-10:00 Monday
+	10:00-11:00 Monday
 	</p>
 	</font>
 	</section>
