--- a/AC1L2.html
+++ b/AC1L2.html
@@ -70,7 +70,7 @@
 				<li>\[\frac{\partial^2 u}{\partial t^2} = c^2\frac{\partial^2u}{\partial x^2}\quad \text{one-dimensional wave equation}\]
 				</li><br>
 				<li class="fragment fade-in">\[\frac{\partial u}{\partial t} = \kappa\frac{\partial^2u}{\partial x^2}\quad \text{one-dimensional heat equation}\]</li><br>
-				<li class="fragment fade-in">\[\frac{\partial^2 u}{\partial x^2} + \frac{\partial^2u}{\partial y^2}=0\quad \text{one-dimensional Laplace's equation}\]</li>				
+				<li class="fragment fade-in">\[\frac{\partial^2 u}{\partial x^2} + \frac{\partial^2u}{\partial y^2}=0\quad \text{two-dimensional Laplace's equation}\]</li>				
 				
 				</ol>
 				
@@ -417,7 +417,7 @@
 					<span class="fragment fade-in">
 					<p>Thus we have two solutions:</p>
 					\[
-					u_1(x,y) = y(f_1(x))\quad\text{and}\quad u_2(x,y) = y^{-2}f_2(x)
+					u_1(x,y) = yf_1(x)\quad\text{and}\quad u_2(x,y) = y^{-2}f_2(x)
 					\]
 					<p>Which we combine linearly to obtain the general solution</p>
 					\[
