--- a/AC1L3.html
+++ b/AC1L3.html
@@ -292,8 +292,8 @@
 						\[
 						 \begin{align}\nonumber
 						 \int_{-\pi}^\pi f(x)\cos(mx)\mathrm{d}x &= \frac{a_0}{2}\int_{-\pi}^\pi\cos(mx)\mathrm{d}x + \\\nonumber
-						 &\sum_{n=1}^\infty\left(a_n\int_{-\pi}^\pi f(x)\cos(nx)\cos(mx)\mathrm{d}x\right.+\\
-						 &\left. b_n\int_{-\pi}^\pi f(x)\sin(nx)\cos(mx)\mathrm{d}x\right)
+						 &\sum_{n=1}^\infty\left(a_n\int_{-\pi}^\pi \cos(nx)\cos(mx)\mathrm{d}x\right.+\\
+						 &\left. b_n\int_{-\pi}^\pi \sin(nx)\cos(mx)\mathrm{d}x\right)
 						 \end{align}
 						\]
 						
