--- a/AC1L9.html
+++ b/AC1L9.html
@@ -328,7 +328,7 @@
 						 u(x,t) = \sum_{n=1}^\infty \Bigg(E_n\cos(nt)+F_n\sin(nt)\Bigg)\sin(nx)
 						\]
 						<span class="fragment fade-in">
-<p>						The first BC gives</p>
+<p>						The first IC gives</p>
 						\[
 						 u(x,0) = \sum_{n=1}^\infty E_n\sin(nx) = \sin(nx) \implies E_1=1 ~\&~ E_n=0,  n>1
 						\]
