--- a/AC2L4.html
+++ b/AC2L4.html
@@ -51,7 +51,7 @@
 		<section  align="left">					
 			<h2>Zeros</h2>					
 					
-			<p style="color:red">A <em>zero</em> of an analytic function $f(z)$ in a domain $D$ is a 
+			<p style="color:#00FF00">A <em>zero</em> of an analytic function $f(z)$ in a domain $D$ is a 
 			point $z=z_0$ such that $f(z_0)=0$</p>
 			
 			<span class="fragment fade-in">
@@ -137,7 +137,7 @@
 			\]
 			
 			<br>
-			we have that $\pm n\pi$ are <span style="color:red">second order zeros</span> of $\sin^2(z)$ for each $n\in\mathbb{Z}$ </p>
+			we have that $\pm n\pi$ are <span style="color:magenta">second order zeros</span> of $\sin^2(z)$ for each $n\in\mathbb{Z}$ </p>
 											
 		</section>	
 	</section>			 					
@@ -160,7 +160,7 @@
 		<section align="left">
 			<h2>Singularities</h2>			
 			
-			<p>Before moving onto complex integration we need to consider <span style="color: red"> singularities</span> of complex valued functions</p>
+			<p>Before moving onto complex integration we need to consider <span style="color: #00FF00"> singularities</span> of complex valued functions</p>
 			
 			<p> Recall that a function is analytic at the point $z_0$ if it is differentiable in a neighbourhood of $z_0$</p>
 			
@@ -266,7 +266,7 @@
 		
 			<p> has zeros at $z_{1,2}=-1,-2$, that is $F(-1)=F(-2)=0$</p>
 		
-			<p style="color:red" class="fragment fade-in">What are the order of these poles?</p>
+			<p style="color:magenta" class="fragment fade-in">What are the order of these poles?</p>
 		</section>
 		
 		<section align="left">
@@ -291,7 +291,7 @@
 			</p>
 			</span>
 			
-			<p class="fragment fade-in"> Thus $z_1=-1$ is an <span style="color:red"><b>order 1 pole</b></span></p>
+			<p class="fragment fade-in"> Thus $z_1=-1$ is an <span style="color:#00FF00"><b>order 1 pole</b></span></p>
 			
 			<p class="fragment fade-in">A similar analysis shows that $z_2=-2$ is also an order 1 pole</p>
 		</section>
@@ -381,7 +381,7 @@
 		<span class="fragment fade-in">			
 		<p><b>Solution</b></p>		
 		This function has two types of singularities: isolated singularities whenever the denominator equals zero, <em>i.e.</em>
-		\[\color{red}{\boxed{\color{white}{
+		\[\color{magenta}{\boxed{\color{white}{
 		\sin\left(z^{-1}\right) = 0 \implies z^{-1} = n\pi \quad n\in\mathbb{Z}}}}
 		\]
 		and an essential singularity at $z=0$.
@@ -421,7 +421,7 @@
 			src="figures/essentialsing.png">
 		</div>
 		
-		<p style="color:red" class="fragment fade-in">It follows that we cannot isolate the point $z^*=0$ and so it must be an essential singularity</p>
+		<p style="color:magenta" class="fragment fade-in">It follows that we cannot isolate the point $z^*=0$ and so it must be an essential singularity</p>
 		</section>
 	</section>
 	
