--- a/AC2L5.html
+++ b/AC2L5.html
@@ -128,7 +128,7 @@
 			</textBox>
 			
 			
-			<p class="fragment fade-in"><b>Note</b></p>
+			<p><b>Note</b></p>
 			
 			<ul>
 				<li class="fragment fade-in">See the <a href="https://jjcrofts77.github.io/Advanced-Calculus-MATH20471/content/notebooks/Part2/Chapter4/FundamentalInt.html" style="color:#00FF00">online notes</a> for a proof of this result</li>
