--- a/AC2L5.html
+++ b/AC2L5.html
@@ -216,7 +216,7 @@
 				<span class="fragment fade-in">
 				<p >which proves the result since by the C-R equations we have</p>
 				\[
-				 u_x=v_y \text{ and } v_x=-u_y \implies u_x-v_y=0 \text{ and } -u_u-v_x=0
+				 u_x=v_y \text{ and } v_x=-u_y \implies u_x-v_y=0 \text{ and } -u_y-v_x=0
 				\]
 					
 				and so \[I = \int_\mathcal{C}f(z)\mathrm{d}z=0\]
