--- a/AC2L5.html
+++ b/AC2L5.html
@@ -219,7 +219,7 @@
 				 u_x=v_y \text{ and } v_x=-u_y \implies u_x-v_y=0 \text{ and } -u_y-v_x=0
 				\]
 					
-				and so \[I = \int_\mathcal{C}f(z)\mathrm{d}z=0\]
+				and so \[I = \oint_\mathcal{C}f(z)\mathrm{d}z=0\]
 				</span>
 			</section>
 										
