--- a/AC2L5.html
+++ b/AC2L5.html
@@ -233,7 +233,7 @@
 			<boxTitle>
 			<h3>Theorem 15.3 &emsp;(Integration via a path)</h3>
 			</boxTitle>			
-			<p>Let $\mathcal{C}$ be a piecwise smooth path, represented by $z(t)$, where $t\in[a,b]$. Let $f(z)$ be a continuous 
+			<p>Let $\mathcal{C}$ be a piecewise smooth path, represented by $z(t)$, where $t\in[a,b]$. Let $f(z)$ be a continuous 
 			function on $\mathcal{C}$. Then </p>
 			\[
 			 \int_\mathcal{C}f(z)\mathrm{d}z = \int_a^b f(z(t))z'(t)\mathrm{d}t
