--- a/AC2L5.html
+++ b/AC2L5.html
@@ -417,7 +417,7 @@
 				<boxTitle>
 				<h3>Theorem 15.4 &emsp;(Cauchy's derivative formula)</h3>
 				</boxTitle>			
-				<p>If $f(z)$ is analytic on and within a simlpe closed curve $\mathcal{C}$ and $z_0$ is a point within $\mathcal{C}$ then</p>
+				<p>If $f(z)$ is analytic on and within a simple closed curve $\mathcal{C}$ and $z_0$ is a point within $\mathcal{C}$ then</p>
 				\[
 				f^{(n)}(z_0) = \frac{n!}{2\pi i}\oint_\mathcal{C}\frac{f(z)}{(z-z_0)^{n+1}}\mathrm{d}z
 				\]
