--- a/AC2L6.html
+++ b/AC2L6.html
@@ -104,7 +104,7 @@
 			 \begin{align*}
 			 \oint_\mathcal{C} \bar{z}\,\mathrm{d}z =  \int_a^b f(z(t)) z'(t)\,\mathrm{d}t
 			 &= \int_0^{2\pi} e^{-it}ie^{it}\mathrm{d}t\\
-			 &= \int_0^{2\pi} i\mathrm{d}t = \Bigg[it\Bigg]_0^{2\pi} = \color{red}{\boxed{\color{white}{2\pi i}}}
+			 &= \int_0^{2\pi} i\mathrm{d}t = \Bigg[it\Bigg]_0^{2\pi} = \color{#00FF00}{\boxed{\color{white}{2\pi i}}}
 			 \end{align*}
 			\]
 			</span>			
@@ -133,7 +133,7 @@
 			\]
 			</span>
 			
-			<p class="fragment fade-in" style="color:red">Recall that $z\bar{z}=|z|^2=1$ for points on the unit circle</p>
+			<p class="fragment fade-in" style="color:#00FF00">Recall that $z\bar{z}=|z|^2=1$ for points on the unit circle</p>
 			
 					
 		</section>
@@ -156,7 +156,7 @@
 		<span class="fragment fade-in">
 		<p>Thus</p>
 		\[
-		\color{red}{\boxed{\color{white}{
+		\color{magenta}{\boxed{\color{white}{
 		\oint_\mathcal{C} z^{-n}\mathrm{d}z=
 		\begin{cases}
 		 2\pi i & n=1\\ 0& n>1
@@ -164,7 +164,7 @@
 		}}}
 		\]
 		</span>
-		<p class="fragment fade-in" style="color:red">For $n<1$, $\oint_\mathcal{C}z^{-n}\mathrm{d}z=0$ by Cauchy's integral theorem since $f$ is analytic</p>
+		<p class="fragment fade-in" style="color:#00FF00">For $n<1$, $\oint_\mathcal{C}z^{-n}\mathrm{d}z=0$ by Cauchy's integral theorem since $f$ is analytic</p>
 		</section>		
 	</section>	
 			
@@ -250,7 +250,7 @@
 		\]
 		<p>thus these two integrals cancel in $I$</p>
 		
-		<p class="fragment fade-in" style="color:red"> In other words $\gamma_2$ is the opposite path of $\gamma_1$</p>
+		<p class="fragment fade-in" style="color:#00FF00"> In other words $\gamma_2$ is the opposite path of $\gamma_1$</p>
 		
 		<img style="margin:0px;padding:0px;border: 3px solid #00FF00;position:absolute;top:0px;left:750px"				
 				height="200"		
@@ -294,11 +294,11 @@
 		<h3>Multiple annulus theorem</h3>
 		
 		<div class="column">
-			<p> $\bullet$ The annuli in the figure are examples of <em style="color:red">doubly connected domains</em></p>		
+			<p> $\bullet$ The annuli in the figure are examples of <em style="color:magenta">doubly connected domains</em></p>		
 		</div>
 			
 		<div class="column" align="right">
-				<img style="margin:0px;padding:0px;border: 3px solid red"				
+				<img style="margin:0px;padding:0px;border: 3px solid #00FF00"				
 				height="150"		
 				src="figures/annuli.png">
 		</div>
@@ -342,7 +342,7 @@
 		<p> provided the paths are traversed in the same direction</p>
 		</textBox>
 		
-		<p class="fragment fade-in" style="color:red">The proof of this result is like that for the Annulus Theorem - <em>i.e.</em> introduce cuts and use Cauchy's Theorem</p>
+		<p class="fragment fade-in" style="color:#00FF00">The proof of this result is like that for the Annulus Theorem - <em>i.e.</em> introduce cuts and use Cauchy's Theorem</p>
 		</section>
 		
 		
@@ -409,7 +409,7 @@
 		\]
 		<p>independent of $z_0$</p>
 		
-		<p style="color:red"> See Example 15.2</p>
+		<p style="color:magenta"> See Example 15.2</p>
 		</span>
 		
 		<span class="fragment fade-in">
@@ -417,7 +417,7 @@
 		\[
 		\begin{align*}
 		\oint_\mathcal{C} f\,\mathrm{d}z &= \oint_\mathcal{C_1} \frac{3}{z+1}\,\mathrm{d}z + \oint_\mathcal{C_2}\frac{4}{z-2i}\,\mathrm{d}z\\
-		&= 3\cdot 2\pi i+ 4\cdot 2\pi i = \color{red}{\boxed{\color{white}{14\pi i}}}
+		&= 3\cdot 2\pi i+ 4\cdot 2\pi i = \color{#00FF00}{\boxed{\color{white}{14\pi i}}}
 		\end{align*}
 		\]
 		</span>
