--- a/AC2L7.html
+++ b/AC2L7.html
@@ -298,7 +298,7 @@
 			<span class="fragment fade-in">
 			Thus
 			\[
-			f(0) = f'(0) = f'''(0)=0,~ f''(0)=-2! \quad \text{and}\quad  f^{(4)}(0) = 4!
+			f(0) = 1, ~ f'(0) = f'''(0)=0,~ f''(0)=-2! \quad \text{and}\quad  f^{(4)}(0) = 4!
 			\]		 
 			</span>
 			
