--- a/AC2L9.html
+++ b/AC2L9.html
@@ -75,7 +75,7 @@
 				
 		<section  align="left">				
 			\[
-			\oint_\mathcal{C}f(z)\mathrm{d}z = \sum_{n=0}^\infty \oint_\mathcal{C}a_n(z-z_0)^n\mathrm{d}z + \sum_{n=1}^\infty \frac{b_n}{(z-z_0)^n}\mathrm{d}z
+			\oint_\mathcal{C}f(z)\mathrm{d}z = \sum_{n=0}^\infty \oint_\mathcal{C}a_n(z-z_0)^n\mathrm{d}z + \sum_{n=1}^\infty \oint_\mathcal{C}\frac{b_n}{(z-z_0)^n}\mathrm{d}z
 			\]
 			<p>Here $\mathcal{C}$ is the curve given by $|z-z_0|=r$</p>
 			
